[package]
name = "orai-airi-token"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0" }
cw-storage-plus = "1.0.1"
cw-controllers = "1.0.1"
thiserror = { version = "1.0.23" }

[dev-dependencies]
oraiswap = "1.0.1"
cw-utils = "0.16.0"
protobuf = "=3.2.0"

